<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search_expenses"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_filter_group"
        android:title="@string/filter_expenses"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_filter_today"
                android:title="@string/menu_today" />
            <item
                android:id="@+id/action_filter_week"
                android:title="@string/menu_week" />
            <item
                android:id="@+id/action_filter_month"
                android:title="@string/menu_month" />
            <item
                android:id="@+id/action_custom_filter"
                android:title="@string/menu_custom_filter"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_view_summary"
        android:title="@string/menu_view_summary"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>