<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_expenses"
            android:icon="@drawable/ic_view_list"
            android:title="@string/menu_all_expenses" />
        <item
            android:id="@+id/nav_today_expenses"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_week_expenses"
            android:icon="@drawable/ic_menu_week"
            android:title="@string/menu_this_week" />
        <item
            android:id="@+id/nav_month_expenses"
            android:icon="@drawable/ic_menu_month"
            android:title="@string/menu_this_month" />
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_menu_summary"
            android:title="@string/menu_summary" />
    </group>

    <item android:title="@string/menu_account_section_title">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
