<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsernameRegister"
        style="@style/Widget.ExpenseTracker.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilEmailRegister"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailRegister"
        style="@style/Widget.ExpenseTracker.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email_hint"
        app:layout_constraintTop_toBottomOf="@+id/tilUsernameRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilPasswordRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordRegister"
        style="@style/Widget.ExpenseTracker.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tilEmailRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.ExpenseTracker.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvGoToLogin"/>

    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>